# machine-history/src/main/resources/META-INF/openapi.json
@@ -1,5 +1,5 @@
 {
-  "swagger" : "2.0",
+  "openapi" : "3.0.2",
   "info" : {
     "title" : "Machine History Initial v3",
     "version" : "1.0.0"
@@ -9,14 +9,17 @@
       "get" : {
         "summary" : "Gets a list of all machines",
         "operationId" : "getAllMachines",
-        "produces" : [ "application/json" ],
         "responses" : {
           "200" : {
             "description" : "The list of machine ID's",
-            "schema" : {
-              "type" : "array",
-              "items" : {
-                "$ref" : "#/definitions/Machine"
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/Machine"
+                  }
+                }
               }
             }
           }
@@ -26,11 +29,14 @@
     "/machines/{id}" : {
       "get" : {
         "operationId" : "getMachine",
-        "produces" : [ "application/json" ],
         "responses" : {
           "200" : {
-            "schema" : {
-              "$ref" : "#/definitions/MachineState"
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/MachineState"
+                }
+              }
             }
           }
         }
@@ -39,17 +45,22 @@
         "name" : "id",
         "in" : "path",
         "required" : true,
-        "type" : "integer"
+        "schema" : {
+          "type" : "integer"
+        }
       } ]
     },
     "/machines/history/{id}" : {
       "get" : {
         "operationId" : "machineHistory",
-        "produces" : [ "application/json" ],
         "responses" : {
           "200" : {
-            "schema" : {
-              "$ref" : "#/definitions/MachineHistory"
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/MachineHistory"
+                }
+              }
             }
           }
         }
@@ -58,81 +69,85 @@
         "name" : "id",
         "in" : "path",
         "required" : true,
-        "type" : "integer"
+        "schema" : {
+          "type" : "integer"
+        }
       } ]
     }
   },
-  "definitions" : {
-    "MachineState" : {
-      "description" : "The representation of the current state of a machine",
-      "required" : [ "id", "name", "health" ],
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "description" : "The machine ID",
-          "type" : "integer"
-        },
-        "name" : {
-          "description" : "The machine name",
-          "type" : "string"
-        },
-        "health" : {
-          "description" : "The machine health",
-          "type" : "integer"
-        }
-      }
-    },
-    "Machine" : {
-      "description" : "A Machine",
-      "required" : [ "id", "name" ],
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "format" : "int32",
-          "description" : "The Machine ID",
-          "type" : "integer"
-        },
-        "name" : {
-          "description" : "The machine name",
-          "type" : "string"
-        }
-      }
-    },
-    "MaintenanceData" : {
-      "description" : "A record of maintenance performed on a machine",
-      "required" : [ "id", "date", "repair", "mechanic" ],
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "type" : "integer"
-        },
-        "date" : {
-          "type" : "string"
-        },
-        "mechanic" : {
-          "type" : "string"
-        },
-        "repair" : {
-          "type" : "integer"
-        },
-        "finalHealth" : {
-          "type" : "integer"
-        }
-      }
-    },
-    "MachineHistory" : {
-      "description" : "The history of a machine",
-      "required" : [ "maintenance", "name" ],
-      "type" : "object",
-      "properties" : {
-        "maintenance" : {
-          "type" : "array",
-          "items" : {
-            "$ref" : "#/definitions/MaintenanceData"
+  "components" : {
+    "schemas" : {
+      "MachineState" : {
+        "description" : "The representation of the current state of a machine",
+        "required" : [ "id", "name", "health" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "description" : "The machine ID",
+            "type" : "integer"
+          },
+          "name" : {
+            "description" : "The machine name",
+            "type" : "string"
+          },
+          "health" : {
+            "description" : "The machine health",
+            "type" : "integer"
           }
-        },
-        "name" : {
-          "type" : "string"
+        }
+      },
+      "Machine" : {
+        "description" : "A Machine",
+        "required" : [ "id", "name" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "format" : "int32",
+            "description" : "The Machine ID",
+            "type" : "integer"
+          },
+          "name" : {
+            "description" : "The machine name",
+            "type" : "string"
+          }
+        }
+      },
+      "MaintenanceData" : {
+        "description" : "A record of maintenance performed on a machine",
+        "required" : [ "id", "date", "repair", "mechanic" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer"
+          },
+          "date" : {
+            "type" : "string"
+          },
+          "mechanic" : {
+            "type" : "string"
+          },
+          "repair" : {
+            "type" : "integer"
+          },
+          "finalHealth" : {
+            "type" : "integer"
+          }
+        }
+      },
+      "MachineHistory" : {
+        "description" : "The history of a machine",
+        "required" : [ "maintenance", "name" ],
+        "type" : "object",
+        "properties" : {
+          "maintenance" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/MaintenanceData"
+            }
+          },
+          "name" : {
+            "type" : "string"
+          }
         }
       }
     }
